# prompt-armor

./: .dockerignore  .gitignore  .llm-shield.yml  .prompt-armor.yml  .prompt-shield.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  publish.yml
dashboard/: .gitignore  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/analysis/: page.tsx
dashboard/src/app/api/analysis/: route.ts
dashboard/src/app/api/feed/: route.ts
dashboard/src/app/api/timeline/: route.ts
dashboard/src/app/feed/: page.tsx
dashboard/src/app/timeline/: page.tsx
dashboard/src/lib/: db.ts  utils.ts
docs/: benchmark.md  cli.md  configuration.md  git-workflow.md  index.md  layers.md  mcp.md  mkdocs.yml  quickstart.md
docs/blog/: detecting-prompt-injection-without-llm.md
integrations/: README.md
integrations/openclaw/: SKILL.md
integrations/openclaw-plugin/: README.md  openclaw.plugin.json  package.json  tsconfig.json
integrations/openclaw-plugin/skills/prompt-armor/: SKILL.md
integrations/openclaw-plugin/src/: index.ts
integrations/openclaw/scripts/: analyze.sh
scripts/: build_attack_db.py  build_benchmark.py  dump_layer_scores.py  expand_benchmark.py  export_l2_model.py  export_l3_onnx.py  train_fusion.py  train_l3_contrastive.py  train_l5_model.py
src/llm_shield/: __init__.py  config.py  engine.py  fusion.py  models.py
src/llm_shield/cli/: main.py
src/llm_shield/data/attacks/: known_attacks.jsonl
src/llm_shield/data/rules/: default_rules.yml
src/llm_shield/layers/: base.py  l1_regex.py  l2_classifier.py  l3_similarity.py  l4_structural.py
src/llm_shield/mcp/: server.py
src/prompt_armor/: __init__.py  collector.py  config.py  council.py  engine.py  fusion.py  models.py
src/prompt_armor/cli/: main.py
src/prompt_armor/data/attacks/: known_attacks.jsonl
src/prompt_armor/data/rules/: default_rules.yml
src/prompt_armor/layers/: base.py  l1_regex.py  l2_classifier.py  l3_similarity.py  l4_structural.py  l5_negative_selection.py
src/prompt_armor/mcp/: server.py
src/prompt_shield/: __init__.py  config.py  engine.py  fusion.py  models.py
src/prompt_shield/cli/: main.py
src/prompt_shield/data/rules/: default_rules.yml
src/prompt_shield/layers/: base.py  l1_regex.py  l2_classifier.py  l3_similarity.py  l4_structural.py
src/prompt_shield/mcp/: server.py
tests/: conftest.py
tests/adversarial/: run_adversarial.py
tests/benchmark/: run_benchmark.py
tests/benchmark/dataset/: benign.jsonl  malicious.jsonl
tests/integration/: test_cli.py  test_mcp_server.py
tests/unit/: test_collector.py  test_config.py  test_council.py  test_engine.py  test_fusion.py  test_l1_regex.py  test_l2_classifier.py  test_l3_similarity.py  test_l4_structural.py  test_models.py
